--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -52,6 +52,7 @@
      <Compile Include="Assets\Scripts\Enemy\EnemyMovement2.cs" />
      <Compile Include="Assets\Scripts\Enemy\EnemyShooting1.cs" />
      <Compile Include="Assets\Scripts\Enemy\EnemySpawn.cs" />
+     <Compile Include="Assets\Scripts\Enemy\EnemySpawnCapped.cs" />
      <Compile Include="Assets\Scripts\Game\Constants.cs" />
      <Compile Include="Assets\Scripts\Game\GameManager.cs" />
      <Compile Include="Assets\Scripts\Game\GameState.cs" />
