Major architectural changes. Created abstract class for Ship, as well as related interfaces (IDamageable<T>, IKillable, IMovement). Got basic inheritance relationship working. Goal: to strike a careful balance between OOP and component-based design.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,6 +63,11 @@
      <Compile Include="Assets\Scripts\Game\UIManager.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerMovement.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerShooting.cs" />
+     <Compile Include="Assets\Scripts\Superclasses\IDamageable.cs" />
+     <Compile Include="Assets\Scripts\Superclasses\IKillable.cs" />
+     <Compile Include="Assets\Scripts\Superclasses\IMovement.cs" />
+     <Compile Include="Assets\Scripts\Superclasses\RangedEnemyShip.cs" />
+     <Compile Include="Assets\Scripts\Superclasses\Ship.cs" />
      <Compile Include="Assets\Scripts\Utility\ColliderHelper.cs" />
      <Compile Include="Assets\Scripts\Utility\EngineUpdate.cs" />
      <Compile Include="Assets\Scripts\Utility\HealthPickup.cs" />
