Encapsulating Collider and Shot info into Ship classes. Added IFires interface. Added FiringShip abstract class, which implemenents IFires. May be useful in increasing firing rate of entities in certain area later on. RangedEnemyShip now inherits FiringShip.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,7 +63,9 @@
      <Compile Include="Assets\Scripts\Game\UIManager.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerMovement.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerShooting.cs" />
+     <Compile Include="Assets\Scripts\Superclasses\FiringShip.cs" />
      <Compile Include="Assets\Scripts\Superclasses\IDamageable.cs" />
+     <Compile Include="Assets\Scripts\Superclasses\IFires.cs" />
      <Compile Include="Assets\Scripts\Superclasses\IKillable.cs" />
      <Compile Include="Assets\Scripts\Superclasses\IMovement.cs" />
      <Compile Include="Assets\Scripts\Superclasses\RangedEnemyShip.cs" />
