--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -74,16 +74,19 @@
      <Compile Include="Assets\Scripts\Scripts [old]\Enemy [old]\Distance Type\EnemyManagerRangedType.cs" />
      <Compile Include="Assets\Scripts\Scripts [old]\Enemy [old]\Distance Type\EnemyMovementDistanceType.cs" />
      <Compile Include="Assets\Scripts\Scripts [old]\Enemy [old]\Distance Type\EnemyShootingDistanceType.cs" />
-     <Compile Include="Assets\Scripts\Scripts [old]\Enemy [old]\Spawns\EnemySpawnCappedTemplate.cs" />
-     <Compile Include="Assets\Scripts\Scripts [old]\Enemy [old]\Spawns\EnemySpawnTemplate.cs" />
      <Compile Include="Assets\Scripts\Scripts [old]\Player\PlayerMovement.cs" />
      <Compile Include="Assets\Scripts\Scripts [old]\Player\PlayerShooting.cs" />
+     <Compile Include="Assets\Scripts\Spawns\EnemySpawnCappedTemplate.cs" />
+     <Compile Include="Assets\Scripts\Spawns\EnemySpawnTemplate.cs" />
      <Compile Include="Assets\Scripts\Utility\ColliderHelper.cs" />
      <Compile Include="Assets\Scripts\Utility\EngineUpdate.cs" />
      <Compile Include="Assets\Scripts\Utility\HealthPickup.cs" />
      <Compile Include="Assets\Scripts\Utility\ParticleSystemAutoDestroy.cs" />
      <Compile Include="Assets\Scripts\Utility\RotationUpdate.cs" />
      <Compile Include="Assets\Scripts\Utility\ShotMover.cs" />
+ <Reference Include="UnityEngine.Purchasing">
+ <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/UnityPurchasing/UnityEngine.Purchasing.dll</HintPath>
+ </Reference>
  <Reference Include="UnityEngine.Analytics">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/UnityAnalytics/UnityEngine.Analytics.dll</HintPath>
  </Reference>
@@ -95,6 +98,9 @@
  </Reference>
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEngine.Advertisements">
+ <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/Advertisements/UnityEngine.Advertisements.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.HoloLens">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/UnityHoloLens/RuntimeEditor/UnityEngine.HoloLens.dll</HintPath>
