--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,6 +58,7 @@
      <Compile Include="Assets\Scripts\Game\UIManager.cs" />
      <Compile Include="Assets\Scripts\General\FiringShip.cs" />
      <Compile Include="Assets\Scripts\General\PlayerShip.cs" />
+     <Compile Include="Assets\Scripts\General\Shields.cs" />
      <Compile Include="Assets\Scripts\General\Ship.cs" />
      <Compile Include="Assets\Scripts\General\Shot.cs" />
      <Compile Include="Assets\Scripts\General\ShotSpawn.cs" />
