--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,7 +51,7 @@
      <Compile Include="Assets\Scripts\Enemy\DropShip.cs" />
      <Compile Include="Assets\Scripts\Enemy\MediShip.cs" />
      <Compile Include="Assets\Scripts\Enemy\PawnShip.cs" />
-     <Compile Include="Assets\Scripts\Enemy\RangedEnemyShip.cs" />
+     <Compile Include="Assets\Scripts\Enemy\RangedShip.cs" />
      <Compile Include="Assets\Scripts\Enemy\Turret.cs" />
      <Compile Include="Assets\Scripts\Game\Constants.cs" />
      <Compile Include="Assets\Scripts\Game\GameManager.cs" />
