--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,6 +46,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Enemy\AssassinCollisionHelper.cs" />
+     <Compile Include="Assets\Scripts\Enemy\AssassinShip.cs" />
      <Compile Include="Assets\Scripts\Enemy\BomberCollisionHelper.cs" />
      <Compile Include="Assets\Scripts\Enemy\BomberShip.cs" />
      <Compile Include="Assets\Scripts\Enemy\DoT.cs" />
