Correct SS being selected; shot damage buggy, but single normal shot coming out correctly

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
      <Compile Include="Assets\Scripts\General\FasterShot.cs" />
      <Compile Include="Assets\Scripts\General\FiringShip.cs" />
      <Compile Include="Assets\Scripts\General\PlayerShip.cs" />
+     <Compile Include="Assets\Scripts\General\PlayerShotSpawn.cs" />
      <Compile Include="Assets\Scripts\General\Shields.cs" />
      <Compile Include="Assets\Scripts\General\Ship.cs" />
      <Compile Include="Assets\Scripts\General\Shot.cs" />
