--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -74,8 +74,10 @@
      <Compile Include="Assets\Scripts\General\Ship.cs" />
      <Compile Include="Assets\Scripts\General\Shot.cs" />
      <Compile Include="Assets\Scripts\General\ShotSpawn.cs" />
+     <Compile Include="Assets\Scripts\General\TripMineWeapon.cs" />
      <Compile Include="Assets\Scripts\General\TurretShotSpawn.cs" />
      <Compile Include="Assets\Scripts\General\Utils.cs" />
+     <Compile Include="Assets\Scripts\General\WeaponsManager.cs" />
      <Compile Include="Assets\Scripts\Interfaces\IDamageable.cs" />
      <Compile Include="Assets\Scripts\Interfaces\IFires.cs" />
      <Compile Include="Assets\Scripts\Interfaces\IKillable.cs" />
