--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -76,6 +76,8 @@
      <Compile Include="Assets\Scripts\General\ShotSpawn.cs" />
      <Compile Include="Assets\Scripts\General\TurretShotSpawn.cs" />
      <Compile Include="Assets\Scripts\General\Utils.cs" />
+     <Compile Include="Assets\Scripts\General\WaveShotManager.cs" />
+     <Compile Include="Assets\Scripts\General\WaveShotSpawn.cs" />
      <Compile Include="Assets\Scripts\Interfaces\IDamageable.cs" />
      <Compile Include="Assets\Scripts\Interfaces\IFires.cs" />
      <Compile Include="Assets\Scripts\Interfaces\IKillable.cs" />
