--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -76,6 +76,7 @@
      <Compile Include="Assets\Scripts\General\ShotSpawn.cs" />
      <Compile Include="Assets\Scripts\General\TurretShotSpawn.cs" />
      <Compile Include="Assets\Scripts\General\Utils.cs" />
+     <Compile Include="Assets\Scripts\General\WaveShot.cs" />
      <Compile Include="Assets\Scripts\General\WaveShotManager.cs" />
      <Compile Include="Assets\Scripts\General\WaveShotSpawn.cs" />
      <Compile Include="Assets\Scripts\Interfaces\IDamageable.cs" />
@@ -91,6 +92,7 @@
      <Compile Include="Assets\Scripts\Powerups\ShurikenPowerup.cs" />
      <Compile Include="Assets\Scripts\Powerups\TriFirePowerup.cs" />
      <Compile Include="Assets\Scripts\Powerups\TripMineWeapon.cs" />
+     <Compile Include="Assets\Scripts\Powerups\WaveShotPowerup.cs" />
      <Compile Include="Assets\Scripts\Powerups\WeaponsManager.cs" />
      <Compile Include="Assets\Scripts\Scripts [old]\Enemy [old]\Bomber Type\CollisionHelperBomberType.cs" />
      <Compile Include="Assets\Scripts\Scripts [old]\Enemy [old]\Bomber Type\EnemyManagerBomberType.cs" />
