Fixed problematic Start() burst rush powerup collider assignments by creating a new manager and having it find those colliders at start; powerup script itself then asks the manager instance for the appropriate colliders. Need to eventually figure out what to do with all these powerup managers - may be ok as is.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -89,6 +89,7 @@
      <Compile Include="Assets\Scripts\Interfaces\IMovement.cs" />
      <Compile Include="Assets\Scripts\Powerups\BurstChargeColliders.cs" />
      <Compile Include="Assets\Scripts\Powerups\BurstRushCollider.cs" />
+     <Compile Include="Assets\Scripts\Powerups\BurstRushManager.cs" />
      <Compile Include="Assets\Scripts\Powerups\BurstRushPowerup.cs" />
      <Compile Include="Assets\Scripts\Powerups\DualFirePowerup.cs" />
      <Compile Include="Assets\Scripts\Powerups\HomingMissileManager.cs" />
