Converting Level container object to LevelData scriptableobj, using community serializabledictionary to visualize in Inspector. Messy stuff, since the dictionary seems to delete duplicate keys immediately from the inspector; may need to manually dive into the code later to prevent foolish errors

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -72,6 +72,7 @@
      <Compile Include="Assets\Scripts\Game\GameState.cs" />
      <Compile Include="Assets\Scripts\Game\InputComponent.cs" />
      <Compile Include="Assets\Scripts\Game\InputManager.cs" />
+     <Compile Include="Assets\Scripts\Game\LevelData.cs" />
      <Compile Include="Assets\Scripts\Game\PlayerInput.cs" />
      <Compile Include="Assets\Scripts\Game\SerializableDictionary.cs" />
      <Compile Include="Assets\Scripts\Game\StartMenuManager.cs" />
