--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
      <Compile Include="Assets\Scripts\Enemy\Turret.cs" />
      <Compile Include="Assets\Scripts\FSM\FSMManager.cs" />
      <Compile Include="Assets\Scripts\FSM\IEntityState.cs" />
+     <Compile Include="Assets\Scripts\FSM\IFireState.cs" />
      <Compile Include="Assets\Scripts\FSM\IMoveState.cs" />
      <Compile Include="Assets\Scripts\Game\AIInput.cs" />
      <Compile Include="Assets\Scripts\Game\Constants.cs" />
