Updated Bomber to move state, decided it made more sense to just keep explosion logic within itself. Keeping BomberFS in case I add some enhanced firing logic later.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -49,7 +49,9 @@
      <Compile Include="Assets\PromotionArea.cs" />
      <Compile Include="Assets\Scripts\Enemy\AssassinCollisionHelper.cs" />
      <Compile Include="Assets\Scripts\Enemy\AssassinShip.cs" />
-     <Compile Include="Assets\Scripts\Enemy\BomberShip.cs" />
+     <Compile Include="Assets\Scripts\Enemy\BomberShip\BomberFS.cs" />
+     <Compile Include="Assets\Scripts\Enemy\BomberShip\BomberMS.cs" />
+     <Compile Include="Assets\Scripts\Enemy\BomberShip\BomberShip.cs" />
      <Compile Include="Assets\Scripts\Enemy\DoT.cs" />
      <Compile Include="Assets\Scripts\Enemy\DropShip.cs" />
      <Compile Include="Assets\Scripts\Enemy\EnemyShip.cs" />
