--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -57,6 +57,7 @@
      <Compile Include="Assets\Scripts\Enemy\EnemyShip.cs" />
      <Compile Include="Assets\Scripts\Enemy\MediShip.cs" />
      <Compile Include="Assets\Scripts\Enemy\Missile Boss\MissileBoss.cs" />
+     <Compile Include="Assets\Scripts\Enemy\Missile Boss\MissileBossMS.cs" />
      <Compile Include="Assets\Scripts\Enemy\PawnShip\PawnFS.cs" />
      <Compile Include="Assets\Scripts\Enemy\PawnShip\PawnMS.cs" />
      <Compile Include="Assets\Scripts\Enemy\PawnShip\PawnShip.cs" />
