EMP Stun effect added for Missile Boss / Inputs. Made some edits to InputComponent, made it an interface and added some req. methods.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -87,6 +87,7 @@
      <Compile Include="Assets\Scripts\Game\StartMenuManager.cs" />
      <Compile Include="Assets\Scripts\Game\UIManager.cs" />
      <Compile Include="Assets\Scripts\General\DictRow.cs" />
+     <Compile Include="Assets\Scripts\General\Drawing.cs" />
      <Compile Include="Assets\Scripts\General\DropShipShotSpawn.cs" />
      <Compile Include="Assets\Scripts\General\FOV2D.cs" />
      <Compile Include="Assets\Scripts\General\FasterShot.cs" />
