Sniper Boss now has collider that dmgs player. Enables / disables appropriately.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -68,6 +68,7 @@
      <Compile Include="Assets\Scripts\Enemy\RangedShip\RangedMS.cs" />
      <Compile Include="Assets\Scripts\Enemy\RangedShip\RangedShip.cs" />
      <Compile Include="Assets\Scripts\Enemy\SafeDistanceCollider.cs" />
+     <Compile Include="Assets\Scripts\Enemy\Sniper Boss\LaserCollider.cs" />
      <Compile Include="Assets\Scripts\Enemy\Sniper Boss\SniperBoss.cs" />
      <Compile Include="Assets\Scripts\Enemy\Sniper Boss\SniperBossMS.cs" />
      <Compile Include="Assets\Scripts\Enemy\Turret.cs" />
